@@ -1,7 +1,7 @@
 #!/usr/bin/perl -w
 use strict;
 
-use Test::More tests => 12;
+use Test::More tests => 13;
 
 use constant NO_SUCH_FILE => "this_file_had_better_not_exist";
 
@@ -12,8 +12,11 @@ eval {
 
 like($@, qr/Can't open '\w+' for reading: /, "Prety printed open msg");
 like($@, qr{\Q$0\E}, "Our file mention in error message");
+
 like($@, qr{for reading: '.+'}, "Error should be in single-quotes");
 like($@->errno,qr/./, "Errno should not be empty");
+
+like($@, qr{\n$}, "Errors should end with a newline");
 is($@->file, $0, "Correct file");
 is($@->function, 'CORE::open', "Correct dying sub");
 is($@->package, __PACKAGE__, "Correct package");
